[UPDATE] đổi tên 'Class' thành 'Grade' cho các class của Grade entity